# grpc-gateway

./: .env  tailwind.config.ts
op-web/: Cargo.toml  build.rs
op-web-restore/op-web/: Cargo.toml
op-web-restore/op-web-ui/: index.html
op-web-restore/op-web-ui.bak/: Cargo.toml
op-web-restore/op-web-ui.bak/src/: api.rs  components.rs  lib.rs  pages.rs  state.rs
op-web-restore/op-web-ui/src/: api.rs  lib.rs
op-web-restore/op-web/src/: lib.rs  mcp.rs  mcp_agents.rs  mcp_compact.rs  mcp_discovery.rs  server.rs  sse.rs  users.rs  websocket.rs
op-web-ui/: Cargo.toml  README.md  codexcontinue.txt
op-web-ui/.angular/cache/21.0.5/app/: angular-compiler.db-lock
op-web-ui/src/: api.rs  lib.rs  workflow_builder.css  workflow_builder.rs
op-web-ui/src/components/: chat.rs  mcp_admin.rs  mod.rs  plugin_config.rs  system_monitor.rs  system_prompt.rs  tool_log.rs  tools_view.rs  workflow_builder.rs
op-web/src/: embedded_ui.rs  groups_admin.rs  lib.rs  main.rs  mcp_smart_router.rs  router.rs  server.rs  state.rs  wireguard.rs
op-web/src/handlers/: agents.rs  auth_bridge.rs  health.rs  (+3 more)
op-web/ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.tsx  index.css
src/components/: AppSidebar.tsx  IconSidebar.tsx  Layout.tsx
src/hooks/: useGrpcClient.ts  useServices.ts
src/pages/: Assistant.tsx  Audit.tsx  Dashboard.tsx  Directory.tsx  Index.tsx  Inspector.tsx  IntegratedDashboard.tsx  McpExecution.tsx  Network.tsx  Plugins.tsx  Policies.tsx  Services.tsx  SystemPrompt.tsx  Tools.tsx
src/types/: opdbus.ts
supabase/: config.toml
(+79 files in other folders)
